# joplin-filesystem

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: api.py  bridge.py  filesystem.py  metadata.py
