[tool.poetry]
name = "joplin-filesystem"
version = "0.1.0"
description = "A FUSE mounted filesystem that provides access to Joplin notes."
authors = ["CalebJohn <calebjohn4@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyfuse3 = "^3.2.1"
trio = "^0.19.0"
httpx = "^0.21.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
